--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">ikr_application</string>
+
+    <string name="title_sample">Sample Screen</string>
 </resources>
