--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
-    <string name="app_name">My Application</string>
-    <string name="dog">Dog</string>
+    <string name="app_name">ikr_application</string>
+
+	<string name="dog">Dog</string>
+    <string name="title_sample">Sample Screen</string>
+	<string name="title_spl3g">Spl3g Screen</string>
 </resources>
