--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
-<resources>
+﻿<resources>
     <string name="app_name">ikr_application</string>
 
 	<string name="dog">Dog</string>
     <string name="title_sample">Sample Screen</string>
 	<string name="title_spl3g">Spl3g Screen</string>
+    <string name="title_stupishin">Stupishin Screen</string>
 </resources>
