initiall commit for demyanenko branch

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">ikr_application</string>
 
     <string name="title_sample">Sample Screen</string>
+    <string name="title_dem_module">DEM Module</string>
 </resources>
