--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,13 @@
 	<string name="dog">Dog</string>
     <string name="title_sample">Sample Screen</string>
 	<string name="title_spl3g">Spl3g Screen</string>
+    <string name="title_akiko23">Akiko23</string>
+    <string name="akiko23_text_time_pattern">Current date: %s</string>
+    <string name="akiko23_text_time_from_reboot_pattern">Time from start: %s</string>
+    <string name="akiko23_open_canvas">Открыть экран для рисования</string>
+    <string name="akiko23_canvas_title">Рисование</string>
+    <string name="akiko23_canvas_description">Рисуйте пальцем или включите ластик, чтобы стирать.</string>
+    <string name="akiko23_mode_draw">Рисовать</string>
+    <string name="akiko23_mode_erase">Стирать</string>
+    <string name="akiko23_clear">Очистить холст</string>
 </resources>
