--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="akiko23_mode_erase">Стирать</string>
     <string name="akiko23_clear">Очистить холст</string>
     <string name="title_stupishin">Stupishin Screen</string>
+    <string name="title_artemkaa">Artemkaa Screen</string>
 </resources>
