--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,6 @@
     <string name="akiko23_mode_erase">Стирать</string>
     <string name="akiko23_clear">Очистить холст</string>
     <string name="title_stupishin">Stupishin Screen</string>
+	<string name="title_quovadis">Quo Vadis Screen</string>
     <string name="title_artemkaa">Artemkaa Screen</string>
 </resources>
