--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="akiko23_clear">Очистить холст</string>
     <string name="title_stupishin">Stupishin Screen</string>
     <string name="title_artemkaa">Artemkaa Screen</string>
+    <string name="title_drain678">drain678 Screen</string>
 </resources>
