feat: сумасшедший кваадрат Малевича

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="title_sample">Sample Screen</string>
 	<string name="title_spl3g">Spl3g Screen</string>
     <string name="title_stupishin">Stupishin Screen</string>
+    <string name="title_michaelnoskov">Страшный квадрат от Гойды</string>
 </resources>
