--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="title_rin2396">rin2396 Screen</string>
     <string name="title_quovadis">Quo Vadis Screen</string>
     <string name="title_artemkaa">Artemkaa Screen</string>
+    <string name="title_antohaot">Antohaot Screen</string>
     <string name="title_grigoran">Grigoran Screen</string>
     <string name="title_kristevt">KristevT Screen</string>
     <string name="title_n0tsSzzz">N0tsSzzz Screen</string>
