--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="title_quovadis">Quo Vadis Screen</string>
     <string name="title_artemkaa">Artemkaa Screen</string>
     <string name="title_antohaot">Antohaot Screen</string>
+    <string name="title_alexcode69">Alexcode69 Screen</string>
     <string name="title_grigoran">Grigoran Screen</string>
     <string name="title_kristevt">KristevT Screen</string>
     <string name="title_n0tsSzzz">N0tsSzzz Screen</string>
