--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="title_n0tsSzzz">N0tsSzzz Screen</string>
     <string name="title_drain678">drain678 Screen</string>
     <string name="title_michaelnoskov">Страшный квадрат от Гойды</string>
+    <string name="title_nastyazz">Nastyazz Screem</string>
 </resources>
