--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="title_nastyazz">Nastyazz Screem</string>
     <string name="title_egorik4">Egorik4 Screen</string>
     <string name="title_zagora">Ann Zagora Screen</string>
+    <string name="title_areg">Krdyan Areg Screen</string>
 </resources>
