demyanenko redone fully

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="title_egorik4">Egorik4 Screen</string>
     <string name="title_zagora">Ann Zagora Screen</string>
     <string name="title_areg">Krdyan Areg Screen</string>
+    <string name="title_demyanenko">Demyanenko F1 Car collection</string>
 </resources>
