--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,7 @@
     <string name="title_antohaot">Antohaot Screen</string>
     <string name="title_alexcode69">Alexcode69 Screen</string>
     <string name="title_grigoran">Grigoran Screen</string>
-    <string name="title_kristevt">KristevT Screen</string>
+    <string name="title_kristevt">KristevT Music</string>
     <string name="title_n0tsSzzz">N0tsSzzz Screen</string>
     <string name="title_drain678">drain678 Screen</string>
     <string name="title_michaelnoskov">Страшный квадрат от Гойды</string>
