--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="akiko23_mode_draw">Рисовать</string>
     <string name="akiko23_mode_erase">Стирать</string>
     <string name="akiko23_clear">Очистить холст</string>
+    <string name="akiko23_show_cat">Показать кота</string>
     <string name="title_stupishin">Stupishin Anime</string>
     <string name="title_rin2396">rin2396 Screen</string>
     <string name="title_quovadis">Quo Vadis Screen</string>
