--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="akiko23_clear">Очистить холст</string>
     <string name="akiko23_show_cat">Показать кота</string>
     <string name="title_rin2396">rin2396 Screen</string>
-    <string name="title_quovadis">Quo Vadis Screen</string>
+    <string name="title_quovadis">НАЖМИ ЧТОБЫ УВИДЕТЬ КИСКУ</string>
     <string name="title_artemkaa">Artemkaa Screen</string>
     <string name="title_antohaot">Antohaot Screen</string>
     <string name="title_alexcode69">Alexcode69 Screen</string>
