--- a/reports/16.12.2025.md
+++ b/reports/16.12.2025.md
@@ -45,7 +45,7 @@
 
 | Пакет | Проблемы, которые надо исправить | Баллы |
 |-------|----------------------------------|-------|
-| **akiko23** | 1. **Нарушение требования "Добавить в верстку элемент, который позволит изменять состояние данных"**: Нет элемента для изменения состояния данных (поиск или добавление). Есть только выбор точности времени и переключатель кота, что не является изменением состояния данных в репозитории (-2 балла). | 8 |
+| **akiko23** | ✅ **Нет проблем** - пакет использует выбор точности времени, который изменяет состояние данных (elapsedText вычисляется на основе данных из репозитория и выбранной точности), Flow, State, внешние библиотеки (Coil) | 10 |
 | **alexcode69** | ✅ **Нет проблем** - пакет полностью соответствует всем требованиям | 10 |
 | **antohaot** | 1. **Нарушение требования "При создании верстки - учесть темы и стили"**: Верстка (`content_antohaot_content.xml`, `item_antohaot_time_record.xml`) использует хардкод размеров текста (`textSize="18sp"`, `textSize="16sp"`, `textSize="14sp"`) вместо theme-атрибутов (-2 балла). Нужно создать стили и использовать их в верстке. | 8 |
 | **artemkaa** | 1. **Нарушение требования "При создании верстки - учесть темы и стили"**: Верстка (`content_artemkaa_content.xml`, `item_artemkaa_time_record.xml`) использует хардкод размеров текста (`textSize="18sp"`, `textSize="16sp"`) вместо theme-атрибутов (-2 балла). Нужно создать стили и использовать их в верстке. | 8 |
@@ -54,33 +54,32 @@
 | **dimmension** | ✅ **Нет проблем** - пакет полностью соответствует всем требованиям | 10 |
 | **drain678** | 1. **Нарушение требования "При создании верстки - учесть темы и стили"**: Верстка (`content_drain678_content.xml`, `item_drain678_time_record.xml`) использует хардкод размеров текста (`textSize="18sp"`, `textSize="16sp"`, `textSize="14sp"`) вместо theme-атрибутов (-2 балла). Нужно создать стили и использовать их в верстке. | 8 |
 | **dyatlova** | ✅ **Нет проблем** - пакет полностью соответствует всем требованиям | 10 |
-| **egorik4** | 1. **Нарушение требования "Добавить в верстку элемент, который позволит изменять состояние данных"**: Есть поиск, но нет элемента для добавления данных в репозиторий (-2 балла). | 8 |
+| **egorik4** | ✅ **Нет проблем** - пакет использует поисковую строку, которая изменяет данные через репозиторий, Flow, State, внешние библиотеки (Coil, Retrofit, OkHttp) | 10 |
 | **eremin** | 1. **Нарушение требования "Добавить в верстку элемент, который позволит изменять состояние данных"**: Нет элемента для изменения состояния данных (поиск или добавление). Есть только переключение layout (список/сетка), что не является изменением состояния данных в репозитории (-2 балла). | 8 |
 | **grigoran** | Модуль вынесен, но экран модуля на момент 17.12.2025 не подключен | пересмотр |
 | **kristevt** | ✅ **Нет проблем** - пакет использует собственные классы, Flow, State, есть элемент для изменения состояния (сортировка), внешние библиотеки (Retrofit, OkHttp) | 10 |
 | **michaelnoskov** | ✅ **Нет проблем** - пакет использует собственный `ColorSquareRepository` и правильные стили | 10 |
 | **MomusWinner** | ✅ **Нет проблем** - пакет использует собственные классы (`PointsViewModel`, `AddPointUseCaseImpl`, `PointsRepositoryImpl`), Flow, State, добавление данных, внешние библиотеки (MPAndroidChart) | 10 |
 | **n0tsSzzz** | 1. **Нарушение требования "При создании верстки - учесть темы и стили"**: Верстка (`content_n0tsszzz_content.xml`, `item_n0tsszzz_record.xml`) использует хардкод размеров текста (`textSize="16sp"`, `textSize="14sp"`, `textSize="12sp"`) вместо theme-атрибутов (-2 балла). Нужно создать стили и использовать их в верстке. | 8 |
-| **nastyazz** | 1. **Нарушение требования "Добавить в верстку элемент, который позволит изменять состояние данных"**: Есть поиск, но нет элемента для добавления данных в UI (есть UseCase, но нет кнопки/поля в Fragment) (-2 балла).<br>2. **Нарушение требования "При создании верстки - учесть темы и стили"**: Верстка (`fragment_nastyazz.xml`) использует хардкод цвета (`textColor="#ff0000"`) вместо theme-атрибутов (-2 балла). Итого: -4 балла. | 6 |
+| **nastyazz** | 1. **Нарушение требования "При создании верстки - учесть темы и стили"**: Верстка (`fragment_nastyazz.xml`) использует хардкод цвета (`textColor="#ff0000"`) вместо theme-атрибутов (-2 балла). Нужно создать стили и использовать их в верстке. | 8 |
 | **quovadis** | ✅ **Нет проблем** - пакет использует правильный пакет `com.example.ikr_application.quovadis.data` и правильные стили, Flow, State, фильтр и добавление данных, внешние библиотеки (Coil), suspend/Dispatcher | 10 |
 | **rin2396** | 1. **Нарушение требования "При создании верстки - учесть темы и стили"**: Верстка (`content_rin2396_content.xml`) использует хардкод размеров текста (`textSize="16sp"`, `textSize="14sp"`) вместо theme-атрибутов (-2 балла). Нужно создать стили и использовать их в верстке. | 8 |
 | **rubsun** | ✅ **Нет проблем** - пакет полностью соответствует всем требованиям | 10 |
 | **spl3g** | ✅ **Нет проблем** - пакет использует собственные классы, Flow, State, элементы для изменения состояния (play/pause, скорость), внешние библиотеки (Retrofit, Gson), suspend/Dispatcher | 10 |
-| **stupishin** | 1. **Нарушение требования "Добавить в верстку элемент, который позволит изменять состояние данных"**: Есть поиск, но нет элемента для добавления данных в репозиторий (-2 балла). | 8 |
+| **stupishin** | ✅ **Нет проблем** - пакет использует поисковую строку, которая изменяет данные через репозиторий, Flow, State, внешние библиотеки (Coil, Retrofit, OkHttp) | 10 |
 | **tire** | 1. **Нарушение требования "Получать данные на фрагмент при помощи Flow!"**: ViewModel не использует Flow, возвращает обычные функции (-2 балла).<br>2. **Нарушение требования "Получать данные на фрагмент в виде State-объекта"**: ViewModel не возвращает State-объект (-2 балла).<br>3. **Нарушение требования "Добавить в верстку элемент, который позволит изменять состояние данных"**: Нет элемента для изменения состояния (поиск, добавление данных). Есть только выбор точности времени, что не является изменением состояния данных (-2 балла).<br>4. **Нарушение требования "Добавить использование внешней библиотеки"**: Пакет не использует внешние библиотеки (-2 балла). Итого: -8 баллов. | 2 |
 | **vtyapkova** | 1. **Нарушение требования "При создании верстки - учесть темы и стили"**: Верстка (`item_vtyapkova_name.xml`) использует хардкод размера текста (`textSize="16sp"`) вместо theme-атрибутов (-2 балла). Нужно создать стили и использовать их в верстке. | 8 |
-| **zagora** | 1. **Нарушение требования "Добавить в верстку элемент, который позволит изменять состояние данных"**: Нет элемента для изменения состояния данных (поиск или добавление). Есть только выбор породы и регенерация изображения, что не является изменением состояния данных в репозитории (-2 балла). | 8 |
+| **zagora** | ✅ **Нет проблем** - пакет использует выбор породы, который изменяет данные через репозиторий (загрузка изображения для выбранной породы), Flow, State, внешние библиотеки (Retrofit, Gson) | 10 |
 
 У всех остальных по нолям
 
 ### Статистика:
 
-- **Пакетов без проблем (10 баллов)**: 10 (alexcode69, denisova, dimmension, dyatlova, kristevt, michaelnoskov, MomusWinner, quovadis, rubsun, spl3g)
-- **Пакетов с нарушением требования по темам/стилям (8 баллов)**: 6 (antohaot, artemkaa, drain678, n0tsSzzz, rin2396, vtyapkova)
-- **Пакетов с нарушением требования "элемент для изменения состояния" (8 баллов)**: 5 (akiko23, egorik4, eremin, stupishin, zagora)
+- **Пакетов без проблем (10 баллов)**: 14 (akiko23, alexcode69, denisova, dimmension, dyatlova, egorik4, kristevt, michaelnoskov, MomusWinner, quovadis, rubsun, spl3g, stupishin, zagora)
+- **Пакетов с нарушением требования "элемент для изменения состояния" (8 баллов)**: 1 (eremin)
 - **Пакетов с нарушением требований "темы/стили" + "внешняя библиотека" (6 баллов)**: 1 (demyanenko)
 - **Пакетов с нарушением требований Flow/State/элемент изменения состояния/внешняя библиотека (2 балла)**: 1 (tire)
-- **Пакетов с нарушением требований "элемент для изменения состояния" + темы/стили (6 баллов)**: 1 (nastyazz)
+- **Пакетов с нарушением требования по темам/стилям (8 баллов)**: 7 (antohaot, artemkaa, drain678, nastyazz, n0tsSzzz, rin2396, vtyapkova)
 - **Пакетов на пересмотре**: 1 (grigoran)
 
 ---
@@ -105,10 +104,5 @@
 - `tire` - не использует внешние библиотеки
 
 **Нарушения требования "Добавить в верстку элемент, который позволит изменять состояние данных"** (требование 9):
-- `akiko23` - нет поиска или добавления данных (только выбор точности и переключатель кота)
-- `egorik4` - есть поиск, но нет добавления данных
-- `eremin` - нет поиска или добавления данных (только переключение layout)
-- `nastyazz` - есть поиск, но нет добавления данных в UI
-- `stupishin` - есть поиск, но нет добавления данных
-- `zagora` - нет поиска или добавления данных (только выбор породы и регенерация)
+- `eremin` - нет поиска или добавления данных (только переключение layout, которое не влияет на ViewModel/State)
 
