--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,7 @@
     <string name="title_n0tsSzzz">N0tsSzzz Screen</string>
     <string name="title_drain678">drain678 Screen</string>
     <string name="title_michaelnoskov">Страшный квадрат от Гойды</string>
+    <string name="michaelnoskov_button_sync">Синхронизировать</string>
     <string name="title_nastyazz">Nastyazz Screem</string>
     <string name="title_egorik4">Egorik4 Screen</string>
     <string name="title_zagora">Ann Zagora Screen</string>
