feat: Add Argun's screen.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 ﻿<resources>
+    <string name="title_argun">Argun Screen</string>
     <string name="app_name">ikr_application</string>
     <string name="title_spl3g">spl3g\'s not so great apple</string>
     <string name="title_akiko23">Akiko23</string>
