--- a/features/tire/impl/src/main/res/values/strings.xml
+++ b/features/tire/impl/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
     <string name="tire_back">Назад</string>
     <string name="tire_all_pokemons">Все покемоны</string>
     <string name="case_preview">Содержимое кейса</string>
+    <string name="tire_ok">OK</string>
+    <string name="tire_pokemon_got">Получен покемон!</string>
+    <string name="tire_new_pokemon_badge">НОВЫЙ!</string>
 </resources>
