feat: add fomin module with Cat API integration

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="title_tire">TiRe Screen</string>
     <string name="title_demyanenko">Demyanenko F1 Car collection</string>
     <string name="title_eremin">Eremin</string>
+    <string name="title_fomin">Cat Breeds</string>
     <string name="capybara_outline_desc">Capybara outline</string>
     <string name="title_fat_capybara">Fat Capybara</string>
     <string name="two_columns">Two Columns</string>
